Fixed some layout issues

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,6 +6,7 @@
     font-family: 'Inter', sans-serif;
     position: relative;
     margin-top: 4rem;
+    margin-left: 2rem;
 }
 
 .home-upper-body {
