--- a/src/styles/Home_Contact.css
+++ b/src/styles/Home_Contact.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     gap: 1rem;
     padding-bottom: 3rem;
+    margin-left: 2rem;
 }
 
 .contact-title {
