--- a/src/styles/Home_Projects.css
+++ b/src/styles/Home_Projects.css
@@ -4,6 +4,7 @@
     font-family: 'Inter', sans-serif;
     width: 100%;
     height: fit-content;
+    margin-left: 2rem;
 }
 
 .home-projects-title-container {
