--- a/src/styles/Home_Skills.css
+++ b/src/styles/Home_Skills.css
@@ -1,6 +1,7 @@
 .skills-body {
     width: 100%;
     height: fit-content;
+    margin-left: 2rem;
 }
 
 .skills-title {
