--- a/src/styles/ProjectsExpanded.css
+++ b/src/styles/ProjectsExpanded.css
@@ -9,6 +9,7 @@
     font-family: 'Poppins', sans-serif;
     min-width: 430px;
     gap: 3rem;
+    margin-left: 2rem;
 }
 
 .projects-expanded-body {
